[2017-09-08 17:57:32 +0200]  Add reflector to all installations                                         karasu      {5feaeb3b}
[2017-09-08 17:56:53 +0200]  Add reflector to all installs                                              karasu      {2cb8e110}
[2017-09-08 17:54:24 +0200]  Changes in deepin packages list                                            karasu      {52b7597a}
[2017-09-08 17:53:37 +0200]  Changes in deepin package list                                             karasu      {04973aa7}
[2017-08-26 16:40:29 +0200]  Add a timeout when using systemd-boot (so users can choose which OS..      karasu      {41be3209}
[2017-08-25 11:12:19 +0200]  Enable colors in nano                                                      karasu      {099e7210}
[2017-08-23 13:52:18 +0200]  Changed deepin package list                                                karasu      {22a11ee3}
[2017-08-23 13:51:22 +0200]  Update deeping packages list                                               karasu      {ad44b58c}
[2017-08-12 00:59:24 -0400]  add thread to kill grub-mount if taking too long                        Skinner, Alex  {e791454a}
[2017-08-11 20:43:59 +0200]  ZFS selection fix bug. Needs testing. #782                                 karasu      {7529c5e6}
[2017-08-06 20:09:29 +0200]  nah, use pamac in plasma, too. (but use kalu in Openbox!)                  karasu      {a53f1294}
[2017-08-06 20:08:28 +0200]  nah, use pamac in plasma, too (but kalu in openbox!)                       karasu      {8b86b94a}
[2017-08-06 19:59:06 +0200]  Use kalu in openbox. Use octopi in plasma. Remove orca and antergos..      karasu      {4c9f8c04}
[2017-08-06 19:57:47 +0200]  Use octopi in plasma. Use kalu in openbox                                  karasu      {86a428c0}
[2017-08-04 21:32:07 +0200]  vim-minimal does not exist                                                 karasu      {45b9eb6d}